# fasptapi_celery_redis

./: README.md
backend/: Dockerfile  config.ini  docker-compose.yaml  pyproject.toml
backend/app/: celery_app.py  configuration.py  logger.py  main.py  redis_example.py  tasks.py
