[tool.poetry]
name = "fastapi-microservice"
version = "0.1.0"
description = ""
authors = ["djs manoj <djsmanoj0000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
gunicorn = "^22.0.0"
celery = "^5.4.0"
redis = "^5.2.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"